corrigindo erro swagger
